updated changes on assets.style and added button-container but wasn't necessary so might take that out in the next git update.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
     <h1>Animal Search</h1>
 
-
-    <div id="button-view"></div>
+    <div id = 'button-container'>
+        <div id="button-view"></div>
+    </div>
     <form id="animal-form">
         <input type="text" id="animal-input"><br>
         <input id="addAnimal" type="submit" value="add an animal!">
