--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class='row'>
             <div class='col-sm-3 col-md-6'>
                 <h1>Animal Search</h1>
+                <h3> Or anything you want.</h3>
             </div>
         </div>
 
@@ -23,7 +24,7 @@
             <div class='col-sm-3 col-md-6'>
                 <form id="animal-form">
                     <input type="text" id="animal-input"><br>
-                    <input id="addAnimal" type="submit" value="add an animal!">
+                    <input id="addAnimal" type="submit" value="add something!">
                 </form>
             </div>
         </div>
@@ -35,7 +36,7 @@
         </div>
 
         <div class='row'>
-            <div class='col-sm-3 col-md-12'>
+            <div class='col-sm-3 col-md-6'>
                 <div id="gifs"></div>
             </div>
         </div>
